--- a/src/main/webapp/pages/admin/admin.html
+++ b/src/main/webapp/pages/admin/admin.html
@@ -6,5 +6,10 @@
 </head>
 <body>
     <h1>管理员界面</h1>
+    <ul>
+        <li><a href="./addProduct.html">添加商品</a></li>
+        <li><a href="">删除商品</a></li>
+        <li><a href="">查看所有用户信息</a></li>
+    </ul>
 </body>
 </html>
